--- a/templates/editar_departamento.html
+++ b/templates/editar_departamento.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Editar Departamento</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
@@ -28,6 +29,11 @@
             <div class="mb-3">
                 <label for="observaciones" class="form-label">Observaciones:</label>
                 <textarea class="form-control" id="observaciones" name="observaciones">{{ departamento.observaciones }}</textarea>
+            </div>
+
+            <div class="mb-3">
+                <label for="inventario" class="form-label">Inventario:</label>
+                <textarea class="form-control" id="inventario" name="inventario">{{ departamento.inventario }}</textarea>
             </div>
 
             <button type="submit" class="btn btn-primary">Guardar Cambios</button>
