--- a/templates/lista_departamentos.html
+++ b/templates/lista_departamentos.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Lista de Departamentos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
@@ -17,6 +18,7 @@
                     <th>Renta</th>
                     <th>Día de Pago</th>
                     <th>Observaciones</th>
+                    <th>Inventario</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -28,6 +30,7 @@
                     <td>{{ departamento.renta }}</td>
                     <td>{{ departamento.dia_pago }}</td>
                     <td>{{ departamento.observaciones }}</td>
+                    <td>{{ departamento.inventario }}</td>
                     <td>
                         <a href="{{ url_for('editar_departamento', departamento_id=departamento.id) }}" class="btn btn-warning btn-sm">Editar</a>
                         <a href="{{ url_for('borrar_departamento', departamento_id=departamento.id) }}" class="btn btn-danger btn-sm" onclick="return confirm('¿Estás seguro de que quieres borrar este departamento?')">Borrar</a>
