--- a/templates/lista_departamentos_contratos.html
+++ b/templates/lista_departamentos_contratos.html
@@ -4,24 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Departamentos y Contratos</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="container">
-        <h1>Departamentos y Contratos</h1>
+        <h1 class="mb-4">Departamentos y Contratos</h1>
 
-        <h2>Departamentos</h2>
+        <h2 class="mb-3">Departamentos</h2>
         <ul class="list-group">
             {% for departamento in departamentos %}
-            <li class="list-group-item">
-                <a href="{{ url_for('mostrar_contrato_completo', departamento_id=departamento.id) }}">
-                    Departamento {{ departamento.numero }}
-                </a>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Departamento {{ departamento.numero }}</span> 
+                <a href="{{ url_for('seleccionar_plantilla', departamento_id=departamento.id) }}" class="btn btn-primary">Generar Contrato</a>
             </li>
             {% endfor %}
         </ul>
 
-        <a class="btn btn-primary mt-3" href="{{ url_for('index') }}">Volver al Inicio</a>
+        <a class="btn btn-secondary mt-3" href="{{ url_for('index') }}">Volver al Inicio</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
